<resources>
    <string name="app_name">ShoeShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_with_an_existing_account">Login with an existing account</string>
    <string name="email_or_password_not_valid">Email or password is not valid</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_in_shoe_shop_you_will_find_all_what_you_want">Welcome in Shoe Shop You will find all what you want</string>
    <string name="next">Next</string>
    <string name="instructions">Instructions</string>
    <string name="first_screen_is_listing_screen_and_the_second_screen_is_details_screen">First screen is listing screen and the second screen is details screen</string>
    <string name="finish">Finish</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="add">Add</string>
    <string name="size">Size</string>
    <string name="desc">Description</string>
</resources>